Fixes ticket #17 for OS X